<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchMenu"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white_24dp"
        />
    <item
        android:id="@+id/action_setting"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_black_24dp" />
</menu>